2008-11-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_pixfmt_to_caps),
	(gst_ffmpeg_smpfmt_to_caps), (gst_ffmpeg_caps_to_codecid),
	(gst_ffmpeg_avpicture_fill):
	Don't convert caps to strings when we don't have debugging enabled.

2008-11-04  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ff_aud_caps_new):
	Fix regression in template caps limitations;
	expose more than 2 channels in both src and sink template
	if so supported.

2008-11-04  Stefan Kost  <ensonic@users.sf.net>

	* ext/ffmpeg/Makefile.am:
	* ext/libpostproc/Makefile.am:
	* ext/libswscale/Makefile.am:
	  Don't install static libs for plugins. Fixes #550851 for -ffmpeg.

2008-10-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Based on a patch by: Alexis Ballier <aballier at gentoo dot org>

	* configure.ac:
	* ext/ffmpeg/gstffmpeg.c:
	* ext/ffmpeg/gstffmpeg.h:
	* ext/ffmpeg/gstffmpegaudioresample.c:
	* ext/ffmpeg/gstffmpegcfg.c: (gst_ffmpeg_flags_get_type),
	(gst_ffmpeg_cfg_init):
	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
	(gst_ffmpeg_caps_to_pixfmt), (gst_ffmpeg_caps_with_codecid):
	* ext/ffmpeg/gstffmpegcodecmap.h:
	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_setcaps),
	(gst_ffmpegdec_register):
	* ext/ffmpeg/gstffmpegdeinterlace.c:
	* ext/ffmpeg/gstffmpegdemux.c:
	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_getcaps),
	(gst_ffmpegenc_setcaps), (gst_ffmpegenc_register):
	* ext/ffmpeg/gstffmpegmux.c:
	* ext/ffmpeg/gstffmpegprotocol.c: (gst_ffmpegdata_seek):
	* ext/libpostproc/gstpostproc.c:
	* ffmpegrev:
	Update ffmpeg/swscale snapshot to the latest revision and adjust
	to API changes. Fixes bug #556405.

	Require libavutil for swscale too when building with an external
	ffmpeg and fix includes for external ffmpeg.

2008-10-15  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Robin Stocker <robin at nibor dot org>

	* ext/ffmpeg/gstffmpegdec.c: