@@ -1,5 +1,12 @@
 2008-11-05  Wim Taymans  <wim.taymans@collabora.co.uk>
 
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_setcaps),
+	(gst_ffmpegdec_get_buffer), (get_output_buffer):
+	Enable direct rendering.
+	Add some more debug info about image strides.
+
+2008-11-05  Wim Taymans  <wim.taymans@collabora.co.uk>
+
 	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_pixfmt_to_caps),
 	(gst_ffmpeg_smpfmt_to_caps), (gst_ffmpeg_caps_to_codecid),
 	(gst_ffmpeg_avpicture_fill):
